tdf#163019 - Remove the formula of a cell during paste special

Remove the formula of a cell during paste special and not only the required for insertion. Otherwise, the formula listeners are not updated correctly leading to a crash during the repaint process.

Change-Id: I4bf1410ecc7b25e36e1cc91bc0cd5335decb1cae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173975
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 9a2c38530dd5e479a96953980ee7f6c448dce87a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174450
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>